fix: extra gap on top of navbar

--- a/src/App.css
+++ b/src/App.css
@@ -64,12 +64,16 @@
 }
 
 body {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
-  min-height: 100vh;
+  height: calc(var(--vh) * 100);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  overflow: hidden;
 }
 
 #app {
